# test-luarocks

./: .gitignore  CMakeLists.txt  hello.cxx  hello.h  hello_wrap.cxx  hello_wrap.h  luadef.h  test-luarocks-dev-1.rockspec
